--- a/src/main/resources/fxml/start.fxml
+++ b/src/main/resources/fxml/start.fxml
@@ -1,22 +1,21 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.*?>
-<?import javafx.scene.layout.ColumnConstraints?>
-<?import javafx.scene.layout.GridPane?>
-<?import javafx.scene.layout.Pane?>
-<?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.layout.*?>
 <GridPane alignment="center" hgap="10" vgap="10" xmlns="http://javafx.com/javafx/8.0.76-ea"
           xmlns:fx="http://javafx.com/fxml/1"
           fx:controller="by.bsuir.fksis.poit.obfuscator.controller.SyntaxPageController">
     <columnConstraints>
+        <ColumnConstraints/>
         <ColumnConstraints/>
     </columnConstraints>
     <rowConstraints>
         <RowConstraints/>
     </rowConstraints>
     <children>
-        <Pane prefHeight="331.0" prefWidth="468.0">
+        <Pane prefHeight="331.0" prefWidth="468.0" GridPane.columnIndex="1">
             <children>
+                <CheckBox mnemonicParsing="false" text="CheckBox"/>
                 <Button id="buttonChoseFile" layoutX="44.0" layoutY="234.0" mnemonicParsing="false"
                         onAction="#handlebuttonChooseFile" text="Выбрать  файл"/>
                 <CheckBox id="removeCommentCheckbox" fx:id="removeCommentCheckbox" layoutX="294.0" layoutY="53.0"
