--- a/src/main/resources/fxml/LexicalObfuscateWindow.fxml
+++ b/src/main/resources/fxml/LexicalObfuscateWindow.fxml
@@ -6,7 +6,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.Pane?>
 <AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.112"
-            xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.LexicalObfuscateWindow">
+            xmlns:fx="http://javafx.com/fxml/1" fx:controller="by.bsuir.fksis.poit.obfuscator.controller.RenameClassComponentController">
     <children>
         <Pane layoutY="1.0" prefHeight="400.0" prefWidth="600.0">
             <children>
