--- a/src/main/resources/fxml/LexicalObfuscateWindow.fxml
+++ b/src/main/resources/fxml/LexicalObfuscateWindow.fxml
@@ -1,23 +1,26 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.Pane?>
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.112"
-            xmlns:fx="http://javafx.com/fxml/1" fx:controller="by.bsuir.fksis.poit.obfuscator.controller.RenameClassComponentController">
+<AnchorPane prefHeight="261.0" prefWidth="292.0" xmlns="http://javafx.com/javafx/8.0.76-ea"
+            xmlns:fx="http://javafx.com/fxml/1"
+            fx:controller="by.bsuir.fksis.poit.obfuscator.controller.RenameClassComponentController">
     <children>
-        <Pane layoutY="1.0" prefHeight="400.0" prefWidth="600.0">
+        <Pane layoutY="1.0" prefHeight="281.0" prefWidth="292.0">
             <children>
-                <Button layoutX="366.0" layoutY="323.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="78.0"
-                        text="Next"/>
-                <CheckBox layoutX="79.0" layoutY="59.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="166.0"
-                          text="Переименовать поля"/>
-                <CheckBox layoutX="79.0" layoutY="106.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="166.0"
-                          text="Переименовать методы"/>
-                <CheckBox layoutX="79.0" layoutY="145.0" mnemonicParsing="false" prefHeight="17.0" prefWidth="166.0"
-                          text="Переименовать классы"/>
+                <Button fx:id="nextPage" layoutX="79.0" layoutY="200.0" mnemonicParsing="false"
+                        onAction="#handleNextButton" prefHeight="25.0" prefWidth="78.0" text="Next"/>
+                <CheckBox fx:id="renameFieldCheckBox" layoutX="79.0" layoutY="59.0" mnemonicParsing="false"
+                          onAction="#handleRenameFieldCheckBox" prefHeight="25.0" prefWidth="166.0"
+                          text="Rename Filelds"/>
+                <CheckBox fx:id="renameMethodCheckBox" layoutX="79.0" layoutY="106.0" mnemonicParsing="false"
+                          onAction="#handleRenameMethodCheckBox" prefHeight="25.0" prefWidth="166.0"
+                          text="Rename methods"/>
+                <CheckBox fx:id="renameClassCheckBox" layoutX="79.0" layoutY="145.0" mnemonicParsing="false"
+                          onAction="#handleRanameClassCheckBox" prefHeight="17.0" prefWidth="166.0"
+                          text="Rename classes"/>
             </children>
         </Pane>
     </children>
