--- a/src/main/resources/fxml/start.fxml
+++ b/src/main/resources/fxml/start.fxml
@@ -1,32 +1,21 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-<GridPane alignment="center" hgap="10" vgap="10" xmlns="http://javafx.com/javafx/8.0.76-ea"
-          xmlns:fx="http://javafx.com/fxml/1"
-          fx:controller="by.bsuir.fksis.poit.obfuscator.controller.SyntaxPageController">
-    <columnConstraints>
-        <ColumnConstraints/>
-        <ColumnConstraints/>
-    </columnConstraints>
-    <rowConstraints>
-        <RowConstraints/>
-    </rowConstraints>
-    <children>
-        <Pane prefHeight="331.0" prefWidth="468.0" GridPane.columnIndex="1">
-            <children>
-                <CheckBox mnemonicParsing="false" text="CheckBox"/>
-                <Button id="buttonChoseFile" layoutX="44.0" layoutY="234.0" mnemonicParsing="false"
-                        onAction="#handlebuttonChooseFile" text="Выбрать  файл"/>
-                <CheckBox id="removeCommentCheckbox" fx:id="removeCommentCheckbox" layoutX="294.0" layoutY="53.0"
-                          mnemonicParsing="false" onAction="#handleRemoveComment" text="Удалить комметарии"/>
-                <CheckBox fx:id="removeJavaDocCheckbox" layoutX="294.0" layoutY="83.0" mnemonicParsing="false"
-                          onAction="#handleJavaDocCheckbox" text="Удалить JavaDoc"/>
-                <CheckBox fx:id="removeSpaceCheckbox" layoutX="294.0" layoutY="110.0" mnemonicParsing="false"
-                          onAction="#handleSpaceObfuscator" text="Удалить форматирование"/>
-                <Button fx:id="obfuscateButton" layoutX="294.0" layoutY="234.0" mnemonicParsing="false"
-                        onAction="#handleObfuscateButton" text="Обфусцировать"/>
-            </children>
-        </Pane>
-    </children>
-</GridPane>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.Pane?>
+<AnchorPane prefHeight="235.0" prefWidth="338.0" xmlns="http://javafx.com/javafx/8.0.76-ea"
+            xmlns:fx="http://javafx.com/fxml/1"
+            fx:controller="by.bsuir.fksis.poit.obfuscator.controller.StartController">
+   <children>
+      <Pane layoutX="-2.0" layoutY="-1.0" prefHeight="336.0" prefWidth="340.0">
+         <children>
+            <Button fx:id="obfusccate" layoutX="113.0" layoutY="82.0" mnemonicParsing="false"
+                    onAction="#handleObfuscate" prefHeight="25.0" prefWidth="113.0" text="Obfuscate"/>
+            <Button fx:id="plugin" layoutX="112.0" layoutY="144.0" mnemonicParsing="false" onAction="#handlePlugin"
+                    prefHeight="25.0" prefWidth="113.0" text="Plugins"/>
+            <Button fx:id="about" layoutX="110.0" layoutY="204.0" mnemonicParsing="false" onAction="#handleAbout"
+                    prefHeight="25.0" prefWidth="113.0" text="About"/>
+         </children>
+      </Pane>
+   </children>
+</AnchorPane>
